# DOCTORADO

./: .gitignore  beamerouterthemeFeather.sty  bibliography.bib  mineria_p4.tex  project.tex
cg/: material
cg/latex/: 2_avance.tex  3_avance.tex  bibliography.bib  final_report.tex  final_slides.tex  papers.tex
cg/src/: CMakeList.txt
cg/src/base/src/: CMakeLists.txt
cg/src/base/src/01_hello/: CMakeLists.txt
cg/src/base/src/Projection_NatteRobbins_CPP/: CMakeLists.txt  (+1 more)
cg/src/sample_cmake/definitions/: CMakeLists.txt  main.c
cg/src/sample_cmake/hello/: CMakeLists.txt  main.c
cg/src/sample_cmake/librerias/: CMakeLists.txt
cg/src/sample_cmake/multiple_files/: CMakeLists.txt  main.c
db/: Presentation1.pptx
db/latex/: 1_spanner.tex  1_spanner.toc  2_ontology.tex  3_umtg.tex  4_splitThreader.tex  beamerinnerthemeFeather.sty  bibliography.bib  final_report.tex  final_slides.tex
ia/genetic_algorithm/: ga_binary.py  ga_real.py
ia/latex/paper/: cup-pan.cls  main.run.xml  main.tex  refs.bib  report_ieee.tex
ia/latex/slides/: bibliography.bib  final_project.tex  final_project_min.tex
ia/src/: ant_col_sys.py  ant_sys.py  bat.py  bee.py  clonalg.py  denditric.py  denditric_breast-cancer-wisconsin.data  estrategias_evol.py  estrategias_evol_mul.py  evol_dif.py  ga_bin.py  ga_per.py  ga_real.py  prog_evol.py  prog_gen.py  pso.py
ia/src/thesis/: pe_seed.py  pso.py  pso_result.txt
ia/src/thesis/seqs/: s8.aln  s8.dnd  s8.fasta
mineria/: Presentation1.pptx  mineria_p4.tex  mineria_paper_base.tex  project.tex
thesis/: bibliography.bib  research_proposal.tex
(+20 files in other folders)
